@@ -25,7 +25,13 @@
 
 package sun.management;
 
+import java.lang.reflect.Method;
+import java.lang.reflect.Field;
 import java.lang.management.ManagementPermission;
+import java.lang.management.ThreadInfo;
+import java.security.AccessController;
+import java.security.PrivilegedActionException;
+import java.security.PrivilegedExceptionAction;
 import java.util.List;
 import javax.management.ObjectName;
 import javax.management.MalformedObjectNameException;
@@ -81,4 +87,56 @@ public class Util {
     public static void checkControlAccess() throws SecurityException {
         checkAccess(controlPermission);
     }
+
+    /**
+     * Returns true if the given Thread is a virutal thread.
+     *
+     * @implNote This method uses reflection because Thread::isVirtual is a preview API
+     * and the java.management cannot be compiled with --enable-preview.
+     */
+    public static boolean isVirtual(Thread thread) {
+        try {
+            return (boolean) THREAD_IS_VIRTUAL.invoke(thread);
+        } catch (Exception e) {
+            throw new InternalError(e);
+        }
+    }
+
+    /**
+     * Returns true if the given ThreadInfo is for a virutal thread.
+     */
+    public static boolean isVirtual(ThreadInfo threadInfo) {
+        try {
+            return (boolean) THREADINFO_VIRTUAL.get(threadInfo);
+        } catch (Exception e) {
+            throw new InternalError(e);
+        }
+    }
+
+    @SuppressWarnings("removal")
+    private static Method threadIsVirtual() {
+        PrivilegedExceptionAction<Method> pa = () -> Thread.class.getMethod("isVirtual");
+        try {
+            return AccessController.doPrivileged(pa);
+        } catch (PrivilegedActionException e) {
+            throw new InternalError(e);
+        }
+    }
+
+    @SuppressWarnings("removal")
+    private static Field threadInfoVirtual() {
+        PrivilegedExceptionAction<Field> pa = () -> {
+            Field f = ThreadInfo.class.getDeclaredField("virtual");
+            f.setAccessible(true);
+            return f;
+        };
+        try {
+            return AccessController.doPrivileged(pa);
+        } catch (PrivilegedActionException e) {
+            throw new InternalError(e);
+        }
+    }
+
+    private static final Method THREAD_IS_VIRTUAL = threadIsVirtual();
+    private static final Field THREADINFO_VIRTUAL = threadInfoVirtual();
 }
